--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,8 @@
   "author": "yuhan",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
